<resources>
    <string name="app_name">CateMenu</string>
    <string name="sucai">素菜</string>
    <string name="huncai">荤菜</string>
    <string name="tangcai">汤菜</string>
    <string name="dianxin">点心</string>
    <string name="homepage">首页</string>
    <string name="classify">分类</string>
    <string name="shop">商城</string>
    <string name="yanhui">宴会助手</string>
    <string name="square">广场</string>
    <string name="scan">浏览:</string>
    <string name="tuijian">推荐：</string>
    <string name="nandu">难度：</string>
    <string name="time_lenghth">时长:</string>
    <string name="introduce">介绍:</string>
    <string name="xiangjianqiebing">香煎茄饼</string>
    <string name="add_menu">加入菜单</string>
    <string name="collect">收藏</string>
    <string name="foodxiangqing">菜品详情</string>
    <string name="chihuotaolun">吃货讨论</string>
    <string name="comment">我要评论</string>
    <string name="share">分享</string>
    <string name="mine">我的</string>
    <string name="qiandao">今日签到</string>
    <string name="shezhi">个人设置</string>
    <string name="mimaxiugai">密码修改</string>
    <string name="shangchuan">上传</string>
    <string name="sixin">私信</string>
    <string name="shoucang">收藏</string>
    <string name="guanzhu">关注</string>
    <string name="video">视频</string>
    <string name="caidanfangan">菜单方案</string>
    <string name="person_settings">个人设置</string>
    <string name="caidanjia">菜单夹</string>
    <string name="start_order">开始排序</string>
    <string name="bzph">本周排行</string>
    <string name="jrtj">今日推荐</string>
    <string name="my_order">我的订单</string>
    <string name="attention">关注</string>
    <string name="my_attention">我的关注</string>
    <string name="my_fans">我的粉丝</string>
    <string name="season">当季推荐菜品</string>
    <string name="today_recommend">今日推荐</string>
    <string name="week_order">本周排行</string>
    <string name="material">食材</string>
    <string name="history">搜索历史</string>
    <string name="more_history">更多历史</string>
    <string name="cancle">取消</string>
    <string name="integral">我的积分</string>
    <string name="my_uploading">我的上传</string>
    <string name="my_sixin">我的私信</string>
    <string name="my_feedback">意见反馈</string>
    <string name="main_material">主料：</string>
    <string name="search">搜索</string>
    <string name="prepare_time">准备时间：</string>
    <string name="made_time">制作时间：</string>
    <string name="side_material">副料：</string>
    <string name="notice">注：</string>
    <string name="publisher">发布人：</string>
    <string name="personal_signature">个性签名：</string>
    <string name="upload">上传</string>
</resources>
