<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@drawable/homepage_edittext_serch_shape">
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/integral"
            android:textSize="15sp"
            android:button="@null"
            android:textColor="@drawable/more_selected"
            android:padding="5dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_attention"
            android:textSize="15sp"
            android:button="@null"
            android:textColor="@drawable/more_selected"
            android:padding="5dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:button="@null"
            android:textColor="@drawable/more_selected"
            android:text="@string/my_uploading"
            android:padding="5dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:button="@null"
            android:textColor="@drawable/more_selected"
            android:padding="5dp"
            android:text="@string/my_sixin"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:button="@null"
            android:textColor="@drawable/more_selected"
            android:textSize="15sp"
            android:text="@string/my_feedback"/>
    </RadioGroup>
</LinearLayout>