<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/yellow"
        android:padding="12dp"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/head"
            android:layout_marginRight="12dp"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/homepage_edittext_bg_shape"
            android:layout_height="wrap_content"
            android:padding="3dp" >
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white" />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/serch"/>
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/menu"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/banner"
                android:scaleType="fitXY"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:text="@string/sucai"
                    android:drawableTop="@mipmap/sucai"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:text="@string/huncai"
                    android:drawableTop="@mipmap/huncai"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/tangcai"
                    android:textSize="11sp"
                    android:drawableTop="@mipmap/tangcai"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:text="@string/dianxin"
                    android:drawableTop="@mipmap/dainxin"
                    android:gravity="center"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/lazy_person_imageview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@mipmap/lazyperson"/>
                <ImageView
                    android:id="@+id/lose_weight_imageview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_below="@id/lazy_person_imageview"
                    android:src="@mipmap/loseweight"/>
                <ImageView
                    android:id="@+id/child_imageview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="9dp"
                    android:layout_below="@id/lose_weight_imageview"
                    android:src="@mipmap/child"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/yellow"
        android:paddingTop="10dp"
        android:paddingBottom="4dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/homepage"
            android:gravity="center"
            android:textSize="11sp"
            android:drawableTop="@mipmap/homepage_false"
            android:drawablePadding="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/classify"
            android:gravity="center"
            android:textSize="11sp"
            android:drawableTop="@mipmap/classify_true"
            android:drawablePadding="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/shop"
            android:gravity="center"
            android:textSize="11sp"
            android:drawableTop="@mipmap/shop_false"
            android:drawablePadding="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/yanhui"
            android:gravity="center"
            android:drawableTop="@mipmap/feast_false"
            android:textSize="11sp"
            android:drawablePadding="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/square"
            android:gravity="center"
            android:textSize="11sp"
            android:drawableTop="@mipmap/square_false"
            android:drawablePadding="5dp"/>

    </LinearLayout>

</LinearLayout>
