<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="15dp"
    android:paddingTop="12dp"
    android:paddingBottom="6dp"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/huncai_item_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/yangpai"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp">
        <TextView
            android:id="@+id/huncai_shop_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="香烤羊排"
            android:layout_marginBottom="6dp"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="6dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/huncai_scan_numb_textview"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="2655"
                android:textSize="15sp"
                android:textColor="@color/yellow"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/tuijian"/>
            <TextView
                android:id="@+id/huncai_tuijian_numb_textview"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="1685"
                android:textSize="15sp"
                android:textColor="@color/yellow"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="6dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nandu"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/huncai_nandu_level_textview"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="初级"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/time_lenghth"/>
            <TextView
                android:id="@+id/huncai_time_textview"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="一小时"
                android:textSize="15sp"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introduce"/>
        <TextView
            android:id="@+id/content_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:textSize="15sp"
            android:text="用烤箱烤羊排，不像油煎那么细腻但不失肥香，还能确保家中没有油烟味"/>
    </LinearLayout>
</LinearLayout>
