<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="7dp"
            android:src="@mipmap/head" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/homepage_edittext_bg_shape"
            android:gravity="center_vertical">

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"
                android:background="@android:color/darker_gray" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/serch" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="11dp"
            android:src="@mipmap/menu" />
    </LinearLayout>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">


</ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/yellow"

        android:paddingTop="10dp"
        android:paddingBottom="4dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/homepage"
            android:gravity="center"
            android:textSize="11sp"
            android:drawableTop="@mipmap/homepage"
            android:drawablePadding="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/classify"
            android:gravity="center"
            android:textSize="11sp"
            android:drawableTop="@mipmap/classify"
            android:drawablePadding="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/shop"
            android:gravity="center"
            android:textSize="11sp"
            android:drawableTop="@mipmap/shop"
            android:drawablePadding="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/yanhui"
            android:gravity="center"
            android:drawableTop="@mipmap/yanhui"
            android:textSize="11sp"
            android:drawablePadding="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/square"
            android:gravity="center"

            android:textSize="11sp"
            android:drawableTop="@mipmap/square"
            android:drawablePadding="5dp"/>

    </LinearLayout>
</LinearLayout>